--- a/app/about.html
+++ b/app/about.html
@@ -302,39 +302,39 @@
         </div>
     </section>
 
-    <section class="blog">
+    <section class="articles">
         <div class="container">
-            <div class="blog__inner">
-                <h2 class="blog__title title about__title--page">Our Insights &
+            <div class="articles__inner">
+                <h2 class="articles__title title about__title--page">Our Insights &
                     Articles</h2>
-                <a class="blog__link about__link-page" href="#">
+                <a class="articles__link about__link-page" href="#">
                     View All
-                    <img class="blog__img" src="images/icons/arrow-right.svg"
+                    <img class="articles__img" src="images/icons/arrow-right.svg"
                          alt="arrow-right icon">
                 </a>
             </div>
-            <div class="blog__items">
-                <div class="blog__item">
-                    <a class="blog__item-imgLink" href="#">
-                        <img class="blog__item-img" src="images/product/blog/1.jpg"
-                             alt="blog image 1">
+            <div class="articles__items">
+                <div class="articles__item">
+                    <a class="articles__item-imgLink" href="#">
+                        <img class="articles__item-img" src="images/product/articles/1.jpg"
+                             alt="articles image 1">
                     </a>
-                    <div class="blog__item-wrapper">
-                        <h4 class="blog__item-title">
-                            <a class="blog__item-titleLink" href="#">
+                    <div class="articles__item-wrapper">
+                        <h4 class="articles__item-title">
+                            <a class="articles__item-titleLink" href="#">
                                 Diusmod tempor incididunt ut labore et dolore magna
                                 aliqua. Ut
                                 enim ad minim veniam
                             </a>
                         </h4>
-                        <div class="blog__item-box">
-                            <div class="blog__item-date">
-                                <a class="blog__item-dateLink" href="#">
+                        <div class="articles__item-box">
+                            <div class="articles__item-date">
+                                <a class="articles__item-dateLink" href="#">
                                     ✉ 28 JANUARY, 2020
                                 </a>
                             </div>
-                            <div class="blog__item-author">
-                                <a class="blog__item-authorLink" href="#">
+                            <div class="articles__item-author">
+                                <a class="articles__item-authorLink" href="#">
                                     ✉ BY ADMIN
                                 </a>
                             </div>
@@ -342,28 +342,28 @@
                     </div>
                 </div>
 
-                <div class="blog__item">
-                    <a class="blog__item-imgLink" href="#">
-                        <img class="blog__item-img" src="images/product/blog/2.jpg"
-                             alt="blog image 1">
+                <div class="articles__item">
+                    <a class="articles__item-imgLink" href="#">
+                        <img class="articles__item-img" src="images/product/articles/2.jpg"
+                             alt="articles image 1">
                     </a>
-                    <div class="blog__item-wrapper">
-                        <h4 class="blog__item-title">
-                            <a class="blog__item-titleLink" href="#">
+                    <div class="articles__item-wrapper">
+                        <h4 class="articles__item-title">
+                            <a class="articles__item-titleLink" href="#">
                                 Aonsectetur adipisicing elit, sed do eiusmod tempor
                                 incididunt
                                 ut
                                 labore et dolore
                             </a>
                         </h4>
-                        <div class="blog__item-box">
-                            <div class="blog__item-date">
-                                <a class="blog__item-dateLink" href="#">
+                        <div class="articles__item-box">
+                            <div class="articles__item-date">
+                                <a class="articles__item-dateLink" href="#">
                                     ✉ 28 JANUARY, 2020
                                 </a>
                             </div>
-                            <div class="blog__item-author">
-                                <a class="blog__item-authorLink" href="#">
+                            <div class="articles__item-author">
+                                <a class="articles__item-authorLink" href="#">
                                     ✉ BY ADMIN
                                 </a>
                             </div>
@@ -371,25 +371,25 @@
                     </div>
                 </div>
 
-                <div class="blog__item">
-                    <a class="blog__item-imgLink" href="#">
-                        <img class="blog__item-img" src="images/product/blog/3.jpg"
-                             alt="blog image 1">
+                <div class="articles__item">
+                    <a class="articles__item-imgLink" href="#">
+                        <img class="articles__item-img" src="images/product/articles/3.jpg"
+                             alt="articles image 1">
                     </a>
-                    <div class="blog__item-wrapper">
-                        <h4 class="blog__item-title">
-                            <a class="blog__item-titleLink" href="#">
+                    <div class="articles__item-wrapper">
+                        <h4 class="articles__item-title">
+                            <a class="articles__item-titleLink" href="#">
                                 Rncididunt ut labore et dolore magna aliqua. Ut enim
                             </a>
                         </h4>
-                        <div class="blog__item-box">
-                            <div class="blog__item-date">
-                                <a class="blog__item-dateLink" href="#">
+                        <div class="articles__item-box">
+                            <div class="articles__item-date">
+                                <a class="articles__item-dateLink" href="#">
                                     ✉ 28 JANUARY, 2020
                                 </a>
                             </div>
-                            <div class="blog__item-author">
-                                <a class="blog__item-authorLink" href="#">
+                            <div class="articles__item-author">
+                                <a class="articles__item-authorLink" href="#">
                                     ✉ BY ADMIN
                                 </a>
                             </div>
